<resources>
<string name="app_name">SmartCities</string>
<string name="checkin_title">Elige tu cafe</string>
<string name="button_checkin">Check-in!</string>

<string-array name="methods_arrays">
    <item>Expresso</item>
    <item>Americano</item>
    <item>Goteo</item>
    <item>Prensa</item>
    <item>Sifón</item>
    <item>Otro</item>
</string-array>
<string name="select_one">Seleccióna metodo</string>
<string name="placeholderOrigin">Origen</string>
<string name="placeholderPrice">Precio</string>
<string name="placeholderNote">Notas</string>labelMethod
<string name="labelMethod">Método de Preparación</string>
<string name="toastCheckinSuccess">Check-in Relizado!!!</string>
<string name="toastCheckinFail">Ups!! ocurrio un error</string>
<string name="title_activity_my_check_ins">MyCheckInsActivity</string>

<string name="label_origin">Origen:</string>
<string name="label_method">Metodo de preparación:</string>
<string name="label_price">Precio:</string>
<string name="label_note">Notas:</string>

<string name="user_layout">Username:</string>
<string name="password_layout">Password:</string>
<string name="confirm_password_layout">Confirmar contraseña</string>
<string name="button_registration">Registrate</string>
<string name="button_login">Login</string>
<string name="toastLoginSuccess">Username and Password correct!</string>
<string name="toastLoginFail">Username or Password incorrect!</string>
<string name="toastRegistrationSuccess">Username and Password correct!</string>
<string name="toastRegistrationFail">Correo o contraseña inválidos</string>
<string name="username">Userame</string>
<string name="password">Contraseña</string>
<string name="menu_profile">Profile</string>
<string name="menu_logout">Logout</string>
<string name="login_textView_message">¿No tienes cuenta? Registrate!</string>
<string name="confirm_password">Confirmar contraseña</string>
<string name="profile_first_name">Nombre</string>
<string name="profile_last_name">Apellidos</string>
<string name="profile_username">Username</string>
<string name="title_profile">Your profile</string>
<string name="profile_mesage_add_photo">Add a cover Photo</string>
<string name="circulo_del_sabor">Circulo del Sabor</string>
<string name="crear_circulo">Crear Circulo</string>
<string name="dulzura_label">Dulzura</string>
<string name="acidez_label">Acidez</string>
<string name="floral_label">Floral</string>
<string name="especiado_label">Especiado</string>
<string name="salado_label">Salado</string>
<string name="frutos_rojos_label">Frutos Rojos</string>
<string name="limpieza_label">Limpieza</string>
<string name="cuerpo_label">Cuerpo</string>
<string name="caramelo_label">Caramelo</string>
<string name="chocolate_label">Chocolate</string>
<string name="agregar_circulo_del_sabor">Agregar Circulo del Sabor</string>
<string name="dulzura_progress_bar">Dulzura</string>
<string name="acidez_progress_bar">Acidez</string>
<string name="furtos_rojos_progress_bar">Furtos Rojos</string>
<string name="caramelo_progress_bar">Caramelo</string>
<string name="chocolate_progress_bar">Chocolate</string>
<string name="floral_progress_bar">Floral</string>
<string name="salado_progress_bar">Salado</string>
<string name="especiado_progress_bar">Especiado</string>
<string name="limpieza_progress_bar">Limpieza</string>
<string name="cuerpo_progress_bar">Cuerpo</string>
<string name="text_message">Text Message</string>
<string name="comment_error_message">Ocurrio un error al comentar</string>
<string name="template_checkins">0 \n Checkins</string>
<string name="template_friends">0 \n Amigos</string>
<string name="menu_search">Buscar</string>
<string name="something">Something</string>
<string name="placeHolderNameBarista">Nombre del Barista</string>
<string name="baristum">Agregar Barista</string>
<string name="barista_label">Barista</string>
<string name="font_blacksword">Blacksword.otf</string>
<string name="menu_accept">Aceptar</string>
<string name="close_session">Cerrar sesión</string>
<string name="email">Correo</string>
<string name="save_profile">Actualizar perfil</string>
<string name="venue_detail">Lugar</string>
<string name="add_venue">Agregar ubicacion</string>
    <string name="nombre">Nombre</string>

</resources>
